development-runs/373/k8s/prod/03-workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-api-mongo
  namespace: default
  labels:
    io.kompose.service: account-api-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: account-api-mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: account-api-mongo
    spec:
      containers:
        - name: account-api-mongo
          image: mongo:6.0.5
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/mongo
              name: account-api-mongo-claim0
      volumes:
        - name: account-api-mongo-claim0
          persistentVolumeClaim:
            claimName: account-api-mongo-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-api
  namespace: default
  labels:
    io.kompose.service: account-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: account-api
  template:
    metadata:
      labels:
        io.kompose.service: account-api
    spec:
      containers:
        - name: account-api
          image: ralfx22/rrb-account-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: default
  labels:
    io.kompose.service: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  template:
    metadata:
      labels:
        io.kompose.service: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ralfx22/rrb-api-gateway
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset-management-api-mysql
  namespace: default
  labels:
    io.kompose.service: asset-management-api-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: asset-management-api-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: asset-management-api-mysql
    spec:
      containers:
        - name: asset-management-api-mysql
          image: mysql:8.0.33
          args:
            - --default-authentication-plugin=mysql_native_password
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /data/mysql
              name: asset-management-api-mysql-claim0
      volumes:
        - name: asset-management-api-mysql-claim0
          persistentVolumeClaim:
            claimName: asset-management-api-mysql-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset-management-api
  namespace: default
  labels:
    io.kompose.service: asset-management-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: asset-management-api
  template:
    metadata:
      labels:
        io.kompose.service: asset-management-api
    spec:
      containers:
        - name: asset-management-api
          image: ralfx22/rrb-asset-management-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: default
  labels:
    io.kompose.service: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: config-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: config-server
    spec:
      containers:
        - name: config-server
          image: ralfx22/rrb-config-server
          ports:
            - containerPort: 8888
              protocol: TCP
          volumeMounts:
            - mountPath: /app/resources/config-files
              name: config-server-claim0
      volumes:
        - name: config-server-claim0
          persistentVolumeClaim:
            claimName: config-server-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: default
  labels:
    io.kompose.service: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery-server
  template:
    metadata:
      labels:
        io.kompose.service: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: ralfx22/rrb-discovery-server
          ports:
            - containerPort: 8761
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: default
  labels:
    io.kompose.service: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.0.1
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-claim0
      volumes:
        - name: grafana-claim0
          persistentVolumeClaim:
            claimName: grafana-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api-kafka
  namespace: default
  labels:
    io.kompose.service: notification-api-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-api-kafka
  template:
    metadata:
      labels:
        io.kompose.service: notification-api-kafka
    spec:
      containers:
        - name: notification-api-kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
  namespace: default
  labels:
    io.kompose.service: notification-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-api
  template:
    metadata:
      labels:
        io.kompose.service: notification-api
    spec:
      containers:
        - name: notification-api
          image: ralfx22/rrb-notification-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: default
  labels:
    io.kompose.service: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.43.0
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-claim0
      volumes:
        - name: prometheus-claim0
          persistentVolumeClaim:
            claimName: prometheus-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default
  labels:
    io.kompose.service: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.11
          ports:
            - containerPort: 6379
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api-postgres
  namespace: default
  labels:
    io.kompose.service: transaction-api-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transaction-api-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: transaction-api-postgres
    spec:
      containers:
        - name: transaction-api-postgres
          image: postgres:15.2
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /data/postgres
              name: transaction-api-postgres-claim0
      volumes:
        - name: transaction-api-postgres-claim0
          persistentVolumeClaim:
            claimName: transaction-api-postgres-claim0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api
  namespace: default
  labels:
    io.kompose.service: transaction-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transaction-api
  template:
    metadata:
      labels:
        io.kompose.service: transaction-api
    spec:
      containers:
        - name: transaction-api
          image: ralfx22/rrb-transaction-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: default
  labels:
    io.kompose.service: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zipkin
  template:
    metadata:
      labels:
        io.kompose.service: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:2.24.0
          ports:
            - containerPort: 9411
              protocol: TCP
